Changed the entirety of backend
In order to make the system more secure,
and to not give the user (frontend) direct manipulation of the entities,
i changed that the service layer will only return dtos, and the
controller layer will not see the entities

The frontend user will get the data as dtos, and not entities